--- a/Day1/styles.css
+++ b/Day1/styles.css
@@ -81,12 +81,12 @@ body{
     background-color: #39ad15; /* Cambia el color de fondo según tus preferencias */
 }
 .icon.red:hover {
-    background-color: #75132f; 
+    background-color: rgb(228, 225, 52); 
 }
 .icon.blue:hover {
-    background-color: #5e8070; 
+    background-color: rgb(233, 55, 55); 
 }.icon.icon.yellow:hover {
-    background-color: #7f6004; 
+    background-color: #39ca1c; 
 }
 
 .bubble {
@@ -214,8 +214,9 @@ body{
     
    
     font-size: 1.6rem;
-    color: white;
+    color: rgb(27, 27, 27);
     justify-content: center;
+  
     
     
    
@@ -230,13 +231,13 @@ body{
   
   .input-container .bash-text .coment {
     
-    color: rgb(190, 174, 174);
+    color: rgb(73, 73, 73);
     display: flex;
     flex-direction: row;
     margin-top: 10px;
     width: 90%;
-    height: 10%;
-    align-items: space-around;
+    height: 11%;
+    align-items: space-between;
   }
   
   .input-container .bash-text .user {
@@ -244,11 +245,11 @@ body{
   }
   
   .input-container .bash-text .vm {
-    color: #2DD4BF;
+    color: #16c5ae;
   }
   
   .input-container .bash-text .char {
-    color: #A78BFA;
+    color: #aa95eb;
   }
 
 
