--- a/Day2/styles.css
+++ b/Day2/styles.css
@@ -20,7 +20,7 @@ body{
 
 .Terminal{
     width: 690px; 
-  height: 620px;/*320px*/
+  height: 320px;/*320px*/
     
     padding: 0.5rem;
     background: linear-gradient(315deg,#03a9f4,#ff0058);
@@ -31,7 +31,7 @@ body{
     border-bottom: 3px solid rgba(255, 255, 255, 0.440);
     border-left: 2px  rgba(255, 255, 255, 0.545) outset;
     box-shadow: -40px 50px 30px rgba(0, 0, 0, 0.280);
-    transform: skewX(0deg);
+    transform: skewX(10deg);
      overflow: hidden;
     
    
@@ -41,7 +41,7 @@ body{
 }
 .Terminal:hover {
     width: 690px;
-    height: 620px;
+    height: 680px;
     transform: skew(0deg);
     transition: .6s;
   }
@@ -124,8 +124,8 @@ body{
 .texto p{
     font-size: 30px;
    text-align: center;
-    
-    color: white;
+   color:#ffffff;
+   
     text-shadow: 10px 10px 7px rgba(0, 0, 0, 0.573);
     transition: .6s;
 }
@@ -198,14 +198,130 @@ border: 0;
         width: 50px; /* Establece el ancho al 50% del tamaño original */
         height: 60px;  
     }
-    .alt p{
-margin:  0 20px 30px 20px;
-color: rgb(255, 255, 255);
+    .cent p{
+
+color: #cfef00;
    
     font-size: 30px;
     text-shadow: 10px 10px 6px rgba(0, 0, 0, 0.573);
     transition: .6s;
     }
     
+
+    .cent{
+        
+        padding: 0 90px 20px 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 10px;
+        align-items: center;
+    }
+ 
+    
+    .button {
+        position: relative;
+        font-size: 20px;
+        font-weight: 600;
+        padding: 5px 10px;
+        color: #cfef00;
+        background-color: transparent;
+        border: 2px solid #cfef00;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: all 0.4s cubic-bezier(0.23, 1, 0.320, 1);
+        overflow: hidden;
+      }
+      
+      .button::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #cfef00;
+        top: 0%;
+        left: -100%;
+        scale: 1;
+        border-radius: inherit;
+        transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+      }
+      
+      .button span {
+        transition: all 0.7s;
+        position: relative;
+        overflow: hidden;
+      }
+      
+      .button span::before {
+        position: absolute;
+        content: 'Descargar';
+        top: 0;
+        left: 0;
+        color: #212121;
+        width: 0;
+        overflow: hidden;
+      }
+      
+      .button:hover span::before {
+        width: 100%;
+        transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+        transition-delay: 0.4s;
+      }
+      
+      .button:hover::before {
+        scale: 3;
+        top: 0%;
+        left: 0%;
+      }
+
+   
+      .social_media{
+        padding:0px 120px;
+        border: 0;
+        margin: 0 0 20px 0;
+        width: 100%;
+        height: 60%;
+        
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+
+      }
+
+      .social_media img{
+        border-radius: 20px;
+        width: 37px;
+        height: 37px;
+        
+    border: 2px  #2980b9; /* Borde sólido */
+    box-shadow: 0 0 10px 5px #cfecff; /* Sombra */
+    transition: box-shadow 0.3s ease-in-out; /* Animación de la sombra */
+}
+.social_media img:hover {
+    box-shadow: 0 0 20px 10px #8ed2ff; /* Cambia la sombra al pasar el cursor sobre la caja */
+}
+
+.c {
+    padding:20px;
+    border: 0;
+    margin: 0 0 0 0;
+    width: 100%;
+    height: 20%;
+    
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+    
+}
+.c p{
+    color: rgb(255, 255, 255);
+  padding: 0 0 30px 0;
+    font-size: 30px;
+    text-shadow: 10px 10px 6px rgba(0, 0, 0, 0.573);
+    transition: .6s;
     
 
+}
+      
+       
